--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -26,6 +26,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 # To [[decide]] to act in a certain way.
 #: {{ux|en|I '''chose''' to walk to work today.}}
 # To wish; to desire; to prefer.
+#: {{ux|en|'''Choose''' truth, and find beauty. '''Choose''' love, and embrace change. ― Justin Deschamps}}
 #* {{w|Oliver Goldsmith}} (1730-1774)
 #*: The landlady now returned to know if we did not '''choose''' a more genteel apartment.
 
