t+qu:[[rimai]] ([[WT:EDIT|Assisted]]) <speak#41221057>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -191,7 +191,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Polish: {{t+|pl|mówić|impf}}, {{t+|pl|rozmawiać|impf}}
 * Portuguese: {{t+|pt|falar}}
 * Punjabi: {{t|pa|ਬੋਲਣਾ|sc=Guru}}
-* Quechua: {{t+|qu|rimay}}, {{t|qu|parlay}}
+* Quechua: {{t+|qu|rimay}}, {{t|qu|parlay}}, {{t|qu|rimai}}
 * Romanian: {{t+|ro|vorbi}}, {{t+|ro|discuta}}
 * Romansch: {{t|rm|pledar}}, {{t|rm|tschantschar}}
 * Russian: {{t+|ru|говори́ть|impf}}, {{t+|ru|разгова́ривать|impf}}
