t+qu:[[yupai]] ([[WT:EDIT|Assisted]]) <count#41221181>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -119,7 +119,7 @@ From {{inh|en|enm|counten}}, a {{bor|en|xno|conter|nocap=1}}, from {{der|en|fro|
 * Persian: {{t+|fa|شمردن|tr=šomordan}}
 * Polish: {{t+|pl|liczyć}}
 * Portuguese: {{t+|pt|contar}}
-* Quechua: {{t|qu|yupay}}
+* Quechua: {{t|qu|yupay}}, {{t|qu|yupai}}
 * Rapa Nui: {{t|rap|tataku}}
 * Romanian: {{t+|ro|număra}}
 * Romansch: {{t|rm|enumerar}}, {{t|rm|dumbrar}}
