t+qu:[[hamui]] t+qu:[[şamui]] ([[WT:EDIT|Assisted]]) <come#41221358>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -241,7 +241,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Pipil: {{t|ppl|witz}}, {{t|ppl|huitz}}
 * Polish: {{qualifier|on foot}} {{t+|pl|przychodzić|impf}}, {{t+|pl|przyjść|pf}}; {{qualifier|by vehicle}} {{t+|pl|przyjeżdżać|impf}}, {{t+|pl|przyjechać|pf}}
 * Portuguese: {{t+|pt|vir}}
-* Quechua: {{t+|qu|hamuy}}
+* Quechua: {{t+|qu|hamuy}}, {{t|qu|hamui}}, {{t|qu|şamui}}
 * Rohingya: {{t|rhg|ai}}
 * Romanian: {{t+|ro|veni}}
 * Romansch: {{t|rm|vegnir}}, {{t|rm|vagnir}}, {{t|rm|neir}}, {{t|rm|gnir}}
