--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -137,6 +137,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Polish: {{t+|pl|grzmot|m}}, {{t+|pl|grom|m}} {{qualifier|dated, poetic}}
 * Portuguese: {{t+|pt|trovão|m}}
 * Quechua: {{t|qu|q'aqya}}
+* Rhine Franconian: {{t|gmw-rfr|Dunner}}
 * Romagnol: {{t|rgn|tràun|m}}
 * Romanian: {{t+|ro|tunet|n}}
 * Romansch: {{t|rm|tun|m}}, {{t|rm|tung|m}}
