--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -163,7 +163,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Persian: {{t+|fa|بازی کردن|tr=bâzi kardan|sc=fa-Arab}}
 * Polish: {{t+|pl|bawić się}}
 * Portuguese: {{t+|pt|jogar}}, {{t+|pt|brincar}}
-* Quechua: {{t|qu|pukllay}}, {{t|qu|awsay}}
+* Quechua: {{t|qu|pukllay}}, {{t|qu|awsay}}, {{t|qu|pukllai}}
 * Romani: {{t|rom|khelel}}
 * Romanian: {{t+|ro|juca}}
 * Romansch: {{t|rm|giugar}}
