--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -8,7 +8,7 @@
 * {{l|en|Jugoslavia}} (''common pre-WWII spelling'')
 
 ===Pronunciation===
-* {{IPA|/juːɡəˈslɑːviə/|lang=en}}
+* {{IPA|/juːɡəˈslɑːvi.ə/|lang=en}}
 
 ===Proper noun===
 {{en-proper noun}}
