--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -7,7 +7,7 @@
 * {{l|en|Isr.}} {{qual|abbreviation}}
 
 ===Pronunciation===
-* {{enPR|ĭzʹrāəl|ĭzʹrēəl}}; {{IPA|/ˈɪzreɪəl/|/ˈɪzriəl/|lang=en}}.
+* {{enPR|ĭzʹrāəl|ĭzʹrēəl}}; {{IPA|/ˈɪzreɪəl/|/ˈɪzri.əl/|lang=en}}.
 *: {{qualifier|In singing also}} {{enPR|ĭzʹrīĕl}}; {{IPA|/ˈɪzraɪɛl/|lang=en}}
 * {{audio|En-us-Israel.ogg|Audio (US)|lang=en}}
 
