--- a/en/慆/慆.15705.wikitext
+++ b/en/慆/慆.15705.wikitext
@@ -19,13 +19,23 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=tāo,qiè
+|m=tāo
 |c=tou1
 |mc=y
 |oc=y
-|ma=
-|cat=a,v
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|慆慢|慆慆|慆淫}}
+
+===References===
+* {{R:twedu|B01159}}
 
 ----
 
