--- a/en/慇/慇.15706.wikitext
+++ b/en/慇/慇.15706.wikitext
@@ -12,7 +12,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|s=}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -23,9 +23,16 @@
 |c=jan1
 |mc=y
 |oc=y
-|ma=
-|cat=a
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|慇懃|慇慇懃懃|慇慇}}
 
 ----
 
