--- a/en/时/时.16926.wikitext
+++ b/en/时/时.16926.wikitext
@@ -23,7 +23,7 @@ Simplified from [[時]] (elimination of [[土]])
 ===Kanji===
 {{ja-kanji|grade=|rs=日03}}
 
-# {{defn|lang=ja|sort=日03}}
+# {{alternative form of|時|lang=ja}}
 
 ====Readings====
 * {{ja-readings
