--- a/en/坋/坋.13006.wikitext
+++ b/en/坋/坋.13006.wikitext
@@ -1,5 +1,4 @@
 ==Translingual==
-{{Han etyl}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=48127|canj=GCSH|ids=⿰土分}}
@@ -14,12 +13,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ban3]], [[fan5]], [[fan6]]|y=ban3, fan5, fan6}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土04}}
+===Pronunciation===
+{{zh-pron
+|m=fèn
+|c=ban6,fan6,fan5
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===References===
+* {{R:yue:mfccd}}
 
 ----
 
@@ -32,15 +47,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[ふん]] (fun), [[ほん]] (hon), [[ぼん]] (bon)|kun=[[ちり]] (chiri), [[ふりかける]] (furikakeru), [[かきまぜるつつみ]] (kakimazerutsutsumi)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fèn]] ([[fen4]]), [[huài]] ([[huai4]]), [[péi]] ([[pei2]])|wg=fen<sup>4</sup>, huai<sup>4</sup>, p'ei<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
 
 ----
 
