--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -1,5 +1,4 @@
 ==Translingual==
-{{Han etyl}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=10104|canj=MWG,XMWG|ids=⿱覀土/西土(depending on font)}}
@@ -16,15 +15,22 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+
 ===Pronunciation===
 {{zh-pron
 |m=yīn
 |c=jan1
 |mc=y
 |oc=y
-|ma=
-|cat=v,n
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
