--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -27,7 +27,7 @@ In current form, calligraphical rendering of 臼.
 ==Chinese==
 
 ===Etymology 1===
-{{zh-see|舊}}
+{{zh-see|舊||old}}
 
 ===Etymology 2===
 {{zh-see|臼|v}}
