--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -207,7 +207,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Latvian: {{t+|lv|Vācija|f}}
 * Lezgi: {{t|lez|Германия|sc=Cyrl}}
 * Ligurian: {{t|lij|Germania|f}}
-* Limburgish: {{t|li|Duutsjlandj}}
+* Limburgish: {{t|li|Duutsjlandj}}, {{t|li|Duutsland}}
 * Lingala: {{t|ln|Alémani}}
 * Lithuanian: {{t+|lt|Vokietija|f}}
 * Livonian: {{t|liv|Saksāmō}}
