/* Vietnamese */ fixed formatting to use /vi-readings/ template <愧#41247355>

--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -67,9 +67,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''愧''' ([[quý]])
+{{vi-readings|rs=心10| hanviet = quý}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=心10}}
 
 [[Category:Vietnamese Han tu]]
 
