--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -9,6 +9,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * {{enPR|kăch|kĕch}}, {{IPA|/kætʃ/|/kɛtʃ/|lang=en}}
 * {{audio|en-us-catch.ogg|Audio (US)|lang=en}}
 * {{rhymes|ætʃ|lang=en}}, {{rhymes|ɛtʃ|lang=en}}
+[[Category:English 1-syllable words]]
 
 Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular or common pronunciation."<ref>[http://edl.byu.edu/webster/c/47 Noah Webster, An American Dictionary of the English Language, 1828. byu.edu].</ref> It is labeled "not infreq[uent]" in Kenyon & Knott (1949).<ref>[https://archive.org/stream/pronouncingdicti00unse#page/72/mode/2up Kenyon & Knott, ''A Pronouncing Dictionary of American English''. archive.org]</ref>
 
