--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -15,7 +15,7 @@
 ===Noun===
 {{en-noun}}
 
-# An evergreen [[tree]], {{taxlink|Olea europaea|species|noshow=1}}, cultivated since ancient times in the Mediterranean for its [[fruit]] and the [[oil]] obtained from it.
+# An evergreen [[tree]], {{taxlink|Olea europaea|species|noshow=1|ver=161026}}, cultivated since ancient times in the Mediterranean for its [[fruit]] and the [[oil]] obtained from it.
 # The small oval [[fruit]] of this tree, eaten ripe (usually black) or unripe (usually green).
 # The wood of the olive tree.
 # A dark yellowish-[[green]] [[color]], that of an unripe olive.
@@ -25,7 +25,7 @@
 # {{lb|en|cookery}} A small [[slice]] of [[meat]] [[season]]ed, [[roll]]ed up, and [[cook]]ed.
 #: ''a beef '''olive'''''
 #: '''''olives''' of veal''
-# Any [[shell]] of the [[genus]] {{taxlink|Oliva|genus|noshow=1}} and allied genera; so called from the shape.
+# Any [[shell]] of the [[genus]] {{taxlink|Oliva|genus|noshow=1|ver=161026}} and allied genera; so called from the shape.
 # {{lb|en|UK|dialect}} An [[oystercatcher]], a shore bird.
 
 ====Translations====
