/* Norwegian Nynorsk */ derived terms <felt#41278861>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -248,7 +248,7 @@ From {{der|nb|de|Feld}}
 ==Norwegian Nynorsk==
 
 ===Etymology===
-From {{etyl|de|nn}} {{m|de|Feld}}
+From {{der|nn|de|Feld}}
 
 ===Noun===
 {{nn-noun-n1}}
@@ -259,8 +259,9 @@ From {{etyl|de|nn}} {{m|de|Feld}}
 {{top2}}
 * {{l|nn|fagfelt}}
 * {{l|nn|feltarbeid}}
-* {{l|nn|magnetfelt}}
+* {{l|nn|feltprest}}
 {{mid2}}
+* {{l|nn|magnetfelt}}
 * {{l|nn|minefelt}}
 * {{l|nn|oljefelt}}
 {{bottom}}
