--- a/en/昍/昍.16949.wikitext
+++ b/en/昍/昍.16949.wikitext
@@ -14,15 +14,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[hyun1]]|y=hyun1}}
+===Pronunciation===
+{{zh-pron
+|m=xuān
+|c=hyun1
+|mc=
+|oc=
+|ma=
+|cat=a,n
+}}
 
-# {{defn|lang=yue|sort=日04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
 
 ----
 
@@ -35,15 +46,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[けん]] (ken), [[かん]] (kan)|kun=[[あきらか]] (akiraka)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xuān]] ([[xuan1]])|wg=hsüan<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
 
 [[fr:昍]]
 [[ko:昍]]
