--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -38,6 +38,15 @@ Strong conjugation of {{m|en|heat}}
 
 # {{lb|en|dialect}} [[heated|Heated]].
 
+
+===Pronunciation===
+
+{{rfp|lang=en}}
+
+{{rfap|lang=en}}
+
+[[Category:English 1-syllable words]]
+
 =====Derived terms=====
 * {{l|en|het up}}
 
