converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <坻#41296170>

--- a/en/坻/坻.13054.wikitext
+++ b/en/坻/坻.13054.wikitext
@@ -13,12 +13,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ci4]], [[dai2]]|y=chi4, dai2}}
+===Pronunciation===
+{{zh-pron
+|m=chí,dǐ
+|c=ci4,dai2
+|mc=y
+|oc=y
+|ma=
+|cat=n,v
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -46,15 +57,6 @@
 # a rock in a river
 # an embankment
 # to stop
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chí]] ([[chi2]]), [[dǐ]] ([[di3]])|wg=ch'ih<sup>2</sup>, ti<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
