--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -94,6 +94,8 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 #:* {{quote-magazine|year=2011|month=Feb|title=Beauty Confessions|volume=216|issue=2|page=60|magazine=Redbook|passage=If you're going one or two shades lighter, don't even touch your brows. But if you're making a big change, soften them by tinting them with home haircolor: a lighter shade of brown for '''blonder''' shades, a golden shade if you're dyeing your hair red.
 }}
 # {{lb|en|of a|person}} Having blond hair.
+#* '''1956''', {{w|James Baldwin}}, ''{{w|Giovanni’s Room}}'', Penguin, 2001, Part Two, Chapter 2,
+#*: He seemed—somehow—younger than I had ever been, and '''blonder''' and more beautiful, and he wore his masculinity as unequivocally as he wore his skin.
 #* {{quote-magazine|year=2012|month=Jan|title=The Best Blonde Hair Color in Hollywood|magazine=Cosmopolitan|url=http://www.cosmopolitan.com/hairstyles-beauty/hair-care/best-blonde-hair-color#slide-1|passage='''Blonde''' bombshells have been around since the beginning of time, but lately, stars have really been stepping up their golden-haired game.}}
 
 ====Translations====
