--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -91,7 +91,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 #: '''''blonde''' ale''; '''''blonde''' beer''
 #* '''1914''', in the ''American Anthropologist'':
 #*: She has a '''blond''' complexion, with brown hair and gray eyes.
-#:* {{quote-magazine|year=2011|month=Feb|title=Beauty Confessions|volume=216|issue=2|page=60|magazine=Redbook|passage=If you're going one or two shades lighter, don't even touch your brows. But if you're making a big change, soften them by tinting them with home haircolor: a lighter shade of brown for '''blonder''' shades, a golden shade if you're dyeing your hair red.
+#* {{quote-magazine|year=2011|month=Feb|title=Beauty Confessions|volume=216|issue=2|page=60|magazine=Redbook|passage=If you're going one or two shades lighter, don't even touch your brows. But if you're making a big change, soften them by tinting them with home haircolor: a lighter shade of brown for '''blonder''' shades, a golden shade if you're dyeing your hair red.
 }}
 # {{lb|en|of a|person}} Having blond hair.
 #* '''1956''', {{w|James Baldwin}}, ''{{w|Giovanni’s Room}}'', Penguin, 2001, Part Two, Chapter 2,
