--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -27,8 +27,8 @@ Oracle bone and bronze inscriptions: original form of {{och-l|賜|to confer, to 
 |c=jik6
 |h=pfs=yit
 |md=ĭk
-|mn=ia̍h/e̍k
-|mn_note=ia̍h - vernacular; e̍k - literary
+|mn=qz,tw,xm,zz:ī/qz:ia̍k/tw,xm,zz:e̍k/qz,tw,xm,zz:ia̍h
+|mn_note=ī/ia̍k/e̍k - literary; ia̍h - vernacular
 |w=5hhiq
 |mc=2
 |oc=2,2
