--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -27,8 +27,8 @@ Oracle bone and bronze inscriptions: original form of {{och-l|賜|to confer, to 
 |c=jik6
 |h=pfs=yit
 |md=ĭk
-|mn=qz,tw,xm,zz:ī/qz:ia̍k/tw,xm,zz:e̍k/qz,tw,xm,zz:ia̍h
-|mn_note=ī/ia̍k/e̍k - literary; ia̍h - vernacular
+|mn=qz:ia̍k/tw,xm,zz:e̍k/qz,tw,xm,zz:ia̍h
+|mn_note=ia̍k/e̍k - literary; ia̍h - vernacular
 |w=5hhiq
 |mc=2
 |oc=2,2
@@ -50,7 +50,7 @@ Oracle bone and bronze inscriptions: original form of {{och-l|賜|to confer, to 
 |h=pfs=yi
 |md=giê/ê
 |md_note=giê - vernacular; ê - literary
-|mn=ī
+|mn=qz,tw,xm,zz:ī
 |w=3hhi
 |mc=1
 |oc=1,1
