--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -3,7 +3,7 @@
 {{stroke order}}
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=88104|canj=OOG|ids=⿻土⿰人人}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=88104|canj=OOG|ids=⿻土从}}
 
 ====Derived characters====
 * [[侳]], [[挫]], [[唑]], [[脞]], [[睉]], [[銼]] ([[锉]]), [[矬]], [[剉]], [[莝]], [[桽]], [[髽]], [[夎]], [[䦟]] ([[䦷]]), [[座]], [[痤]], [[趖]]
