--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -68,6 +68,7 @@ From {{inh|en|enm|counten}}, a {{bor|en|xno|conter|nocap=1}}, from {{der|en|fro|
 * Czech: {{t+|cs|počítat}}
 * Dalmatian: {{t|dlm|embruar}}
 * Danish: {{t|da|tælle}}
+* Dongxiang: {{t|sce|toula}}
 * Dutch: {{t+|nl|tellen}}
 * Esperanto: {{t|eo|kalkuli}}, {{t|eo|nombri}}, {{t|eo|numeri}}
 * Estonian: {{t|et|loendama}}
