--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -240,6 +240,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * Finnish: {{t+|fi|tuntea}}, {{t+|fi|tuntua}}
 * French: {{t+|fr|sentir}}, {{t+|fr|penser}}
 * German: {{t+|de|fühlen}}, {{t+|de|denken}}, {{t|de|das Gefühl haben}}
+* Greek: {{t+|el|ψυλλιάζομαι}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|érez}}, {{t|hu|az az érzése van}}
 * Japanese: {{t+|ja|思う|tr=おもう, omou}}
