t+mi:[[whakatoutou]] ([[WT:EDIT|Assisted]]) <push#41358236>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -207,6 +207,7 @@ From {{etyl|enm|en}} {{m|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, from 
 {{trans-top|intransitive: tense the muscles of the abdomen}}
 * Czech: {{t+|cs|tlačit}}
 * German: {{t+|de|drücken}}
+* Maori: {{t|mi|whakatoutou}} {{qualifier|referring to childbirth}}
 * Russian: {{t+|ru|ту́житься}} {{qualifier|of women during birth}}
 {{trans-mid}}
 * Spanish: {{t+|es|pujar}}
