--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -25,6 +25,15 @@ From {{etyl|frm|en}} {{m|fr|blonde|g=f}}. For more, see the entry ''[[blond]]''.
 {{en-adj|er|more}}
 
 # {{alternative form of|blond|lang=en}}
+# {{lb|en|of a|female}} {{def|[[stupid]], [[ignorant]], [[naive]]}}
+#* '''2005''', Nancy Bartholomew, ''Lethally Blonde'', Silhouette (ISBN 9781552543771), page 8
+#*: Emma&#39;s already huge green eyes widen and she gives me this look like, “Oh my  God, sometimes you are just so '''blonde'''!”
+#* '''2014''', Aviva Drescher, ''Leggy Blonde: A Memoir'', Simon and Schuster (ISBN 9781476722153)
+#*: I was so '''blonde''' I honestly had no idea why he got so angry. He cooled on me for a week or so.
+#* '''2013''', Melony Osterhoudt, ''The Ebook Collection of 101 Dumb Blonde Jokes'', Lulu Press, Inc (ISBN 9781105537455)
+#*: She was so '''blonde''' that... She tried to drown a fish.
+#* '''2003''', Bennett Fairorth, ''The Land Where My American Mother Died--Palermo, Sicily'', iUniverse (ISBN 9780595279388), page 201
+#*: “She was so '''blonde''', she studied for a blood test, when she went to the airport and saw a sign that said, &#39;Airport Left,&#39; she turned around and went home, when she heard that 90% of all crimes occur around the home, she moved.
 
 ====Usage notes====
 See the usage notes in the entry {{m|en|blond}}.
