Undo revision 41368059 by [[Special:Contributions/2601:5C0:C100:3DD2:1BB:FA47:E729:9082|2601:5C0:C100:3DD2:1BB:FA47:E729:9082]] ([[User talk:2601:5C0:C100:3DD2:1BB:FA47:E729:9082|talk]]) <值#41368329>

--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -30,10 +30,10 @@
 {{zh-forms|alt=値}}
 
 ===Glyph origin===
-{{Han etym}}额
-w
+{{Han etym}}
+
 ===Pronunciation===
-{{zh-prone
+{{zh-pron
 |m=zhí
 |c=zik6
 |h=pfs=ta̍t/chhṳ̍t
