--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -294,6 +294,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Occitan: {{t+|oc|burre|m}}, {{t+|oc|bodre|m}}
 * Old Church Slavonic: {{t|cu|масло|n|sc=Cyrs}}
 * Old English: {{t|ang|butere|f}}
+* Osage: {{t|osa|paazénii wéli}}
 * Ossetian: {{t|os|нæлхæ}}
 * Ottoman Turkish: {{t|ota|تره‌یاغی|tr=tereyağı}}
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
