--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -14,7 +14,10 @@ The pronunciation is near from French one.
 {{en-adj|-}}
 
 # {{lb|en|free software movement}} With very few limitations on distribution or improvement; including [[source code]].
+# {{lb|en|uncommon}} [[free]]; [[independent]].
 
+===Usage notes===
+The latter sense is mainly used to distinguish from the [[gratis]] meaning of the word [[free]].
 ===See also===
 * {{l|en|free as in speech}}
 * {{l|en|gratis}}
