--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -143,7 +143,7 @@ From {{etyl|xno|en}} {{m|fro|founder}} (French: {{m|fr|fonder}}), from {{etyl|la
 * WordNet 3.1: A Lexical Database for English, Princeton University
 
 ===Etymology 3===
-From {{etyl|frm|en}} {{m|frm|fondre}}, from {{etyl|la|-}} {{m|la|fundō|fundere}}.
+{{bor|en|frm|fondre}}, from {{der|en|la|fundō|fundere}}.
 
 ====Verb====
 {{en-verb}}
