/* Derived terms */ <olive#41384839>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -196,22 +196,7 @@
 {{checktrans-bottom}}
 
 ====Derived terms====
-{{top3}}
-* {{l|en|black olive}}
-* {{l|en|green olive}}
-* {{l|en|olive branch}}
-* {{l|en|olive crown}}
-{{mid3}}
-* {{l|en|olive drab}}<!--[[o.d.]]-->
-* {{l|en|olive green}}
-* {{l|en|olive grove}}
-* {{l|en|olive oil}}
-* {{l|en|olivey}}
-{{mid3}}
-* {{l|en|queen olive}}
-* {{l|en|Russian olive}}
-* {{l|en|wild olive}}
-{{bottom}}
+{{der3|black olive|green olive|olive branch|olive crown|[[olive drab]]<!--[[o.d.]]-->|olive green|olive grove|olive oil|olivey|queen olive|Russian olive|wild olive|lang=en}}
 
 ===Adjective===
 {{en-adj}}
