--- a/en/b/bunken.3566.wikitext
+++ b/en/b/bunken.3566.wikitext
@@ -1,4 +1,20 @@
 {{also|Bunken}}
+==Norwegian Bokmål==
+
+===Noun===
+{{head|nb|noun form|g=m}}
+
+# {{inflection of|bunke||def|s|lang=nb}}
+
+----
+==Norwegian Nynorsk==
+
+===Noun===
+{{head|nn|noun form|g=m}}
+
+# {{inflection of|bunke||def|s|lang=nn}}
+
+----
 ==Swedish==
 
 ===Noun===
