--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -524,7 +524,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{wikipedia|lang=fr}}
 
 ===Etymology===
-From {{etyl|en|fr}}. {{etystub|lang=fr}}
+From {{etyl|en|fr}} catch.
 
 ===Noun===
 {{fr-noun|m|-}}
