/* Derived terms */ <count#41398672>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -34,13 +34,13 @@ From {{inh|en|enm|counten}}, a {{bor|en|xno|conter|nocap=1}}, from {{der|en|fro|
 #: {{rfquotek|Burrill}}
 
 =====Derived terms=====
-{{rel-top|Terms derived from ''count'' (verb)}}
-* {{l|en|count cards}}
-* {{l|en|count one's blessings}}
-* {{l|en|count out}}
-{{rel-mid}}
-* {{l|en|count to ten}}
-{{rel-bottom}}
+{{der3|title=Terms derived from ''count'' (verb)
+| {{l|en|count cards}}
+| {{l|en|count one's blessings}}
+| {{l|en|count out}}
+| {{l|en|count to ten}}
+| {{l|en|stand up and be counted}}
+}}
 
 =====Related terms=====
 * {{l|en|compute}}
