--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -58,6 +58,7 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 {{trans-top|outer garment covering the upper torso and arms}}
 * Arabic: {{t+|ar|مِعْطَف|m}}
 * Armenian: {{t+|hy|վերարկու|sc=Armn}}
+* Azeri: {{t+|az|palto}}
 * Belarusian: {{t|be|паліто́|n|sc=Cyrl}}, {{t|be|пальто́|n|sc=Cyrl}}, {{t|be|пінжа́к|m|sc=Cyrl}} {{qualifier|jacket}}
 * Bulgarian: {{t+|bg|сако|n|sc=Cyrl}}, {{t+|bg|жакет|m|sc=Cyrl}}, {{t+|bg|пардесю́|n}}, {{t+|bg|палто́|n}}
 * Catalan: {{t+|ca|abric|m}}, {{t+|ca|casaca|f}}
@@ -82,10 +83,11 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * Japanese: {{t|ja|コート|tr=kōto}}, {{t+|ja|外套|tr=がいとう, gaitō}}
 * Khmer: {{t|km|អាវធំ}}
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
+{{trans-mid}}
 * Latin: {{t|la|pallium|n}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
+* Lithuanian: {{t|lt|paltas|m}}
 * Luhya: {{t|luy|kumuchosi}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
 * Malay: {{t|ms|kot}}
@@ -110,7 +112,9 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * Swedish: {{t+|sv|rock|c}}
 * Taos: {{t|twf|kùti’ína}}
 * Thai: {{t|th|เสื้อนอก}}
+* Turkish: {{t+|tr|palto}}
 * Ukrainian: {{t+|uk|пальто́|n|sc=Cyrl}}, {{t|uk|піджа́к|sc=Cyrl}} {{qualifier|jacket}}
+* Vietnamese: {{t|vi|áo bành tô}}
 * Volapük: {{t-needed|vo}}
 * Welsh: {{t|cy|côt|f}}
 {{trans-bottom}}
