t+sq:[[pallto]] t+mn:[[пальто]] t+kk:[[пальто]] t+ky:[[пальто]] t+tg:[[палто]] t+uz:[[palʼto]] ([[WT:EDIT|Assisted]]) <coat#41494035>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -56,6 +56,7 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 
 ====Translations====
 {{trans-top|outer garment covering the upper torso and arms}}
+* Albanian: {{t+|sq|pallto|f}}
 * Arabic: {{t+|ar|مِعْطَف|m}}
 * Armenian: {{t+|hy|վերարկու|sc=Armn}}
 * Azeri: {{t+|az|palto}}
@@ -81,8 +82,10 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * Irish: {{t|ga|cóta|m}}, {{t|ga|casóg|f}}
 * Italian: {{t+|it|mantello|m}}, {{t+|it|cappotto|m}}
 * Japanese: {{t|ja|コート|tr=kōto}}, {{t+|ja|外套|tr=がいとう, gaitō}}
+* Kazakh: {{t|kk|пальто}}
 * Khmer: {{t|km|អាវធំ}}
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
+* Kyrgyz: {{t|ky|пальто}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
 {{trans-mid}}
 * Latin: {{t|la|pallium|n}}
@@ -92,6 +95,7 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
 * Malay: {{t|ms|kot}}
 * Maori: {{t|mi|koti}}
+* Mongolian: {{t+|mn|пальто}}
 * Navajo: {{t|nv|éétsoh}}
 * Norman: {{t|nrf|câsaque|f}}
 * Norwegian: {{t+|no|frakk|m}}
@@ -110,10 +114,12 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * Spanish: {{t+|es|abrigo|m}}, {{t+|es|saco|m}}, {{t+|es|casaca|f}}
 * Swahili: {{t+|sw|koti}}
 * Swedish: {{t+|sv|rock|c}}
+* Tajik: {{t|tg|палто}}
 * Taos: {{t|twf|kùti’ína}}
 * Thai: {{t|th|เสื้อนอก}}
 * Turkish: {{t+|tr|palto}}
 * Ukrainian: {{t+|uk|пальто́|n|sc=Cyrl}}, {{t|uk|піджа́к|sc=Cyrl}} {{qualifier|jacket}}
+* Uzbek: {{t|uz|palʼto}}
 * Vietnamese: {{t|vi|áo bành tô}}
 * Volapük: {{t-needed|vo}}
 * Welsh: {{t|cy|côt|f}}
