--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -52,7 +52,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 #*: That she may '''sucke''' their life, and drinke their blood, / With which she from her childhood had bene fed.
 # {{lb|en|transitive}} To work the [[lip]]s and [[tongue]] on (an object) to extract [[moisture]] or [[nourishment]]; to absorb (something) in the mouth. {{defdate|from 14th c.}}
 # {{lb|en|transitive}} To [[pull]] (something) in a given direction, especially without direct contact. {{defdate|from 17th c.}}
-# {{lb|en|transitive|slang|vulgar}} To perform [[fellatio]]. {{defdate|from 20th c.}}
+# {{lb|en|transitive|slang|vulgar}} [[Fellatio]] of a penis. {{defdate|from 20th c.}}
 # {{lb|en|intransitive|slang}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency. {{defdate|from 20th c.}}
 #* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, p. 251:
 #*: . . . and it has a few very high points . . . but as a novel, it '''sucks'''
