--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -9,7 +9,6 @@
 * [[侳]], [[挫]], [[唑]], [[脞]], [[睉]], [[銼]] ([[锉]]), [[矬]], [[剉]], [[莝]], [[桽]], [[髽]], [[夎]], [[䦟]] ([[䦷]]), [[座]], [[痤]], [[趖]]
 
 ====References====
-<references/>
 * {{Han ref|kx=0225.150|dkj=04931|dj=0460.060|hdz=10423.120|uh=5750}}
 
 ----
@@ -19,7 +18,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-{{Han compound|从|t1=two people|土|t2=ground|ls=ic}} = two people sitting on the ground.<ref>http://www.yellowbridge.com/chinese/character-etymology.php?searchChinese=1&zi=%E5%9D%90#</ref>
+{{Han compound|留|t1=to stay|土|t2=ground|ls=ic}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -33,23 +32,26 @@
 |w=3zu
 |mc=y
 |oc=y
-|ma=zh-zuò.ogg
+|ma=y
 |cat=v,n,adv
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# to [[sit]]
-# to [[go]] [[by]], [[travel]] by, [[ride]]
+# to [[sit]]; to [[take]] a [[seat]]
+# to [[go]] [[by]]; to [[travel]] by; to [[ride]]
 #: {{zh-x|我 坐 飛機 去 ^上海。|I go to Shanghai '''by''' plane.}}
 #: {{zh-x|她 開車 去， 不 坐 火車 去。|She does not go '''by''' train, she drives.}}
-# [[seat]]
-# to bear fruit
-# {{lb|zh|literary}} because of, on the ground of
+# {{zh-alt-form|座|[[seat]]}}
+# to [[bear]] [[fruit]]
+# {{lb|zh|literary}} [[because of]]; [[on the ground]] of
 
 ====See also====
 * {{zh-l|上|to board}}
+
+===Compounds===
+{{zh-der|告坐|久坐|坐床|安坐|愁坐|促坐|呆坐|同起同坐|坐科|坐以待斃|坐不窺堂|升坐|坐不穩|坐觀成敗|坐懷不亂|坐藥|坐頭|坐而論道|倒坐|坐上客|坐牢|反坐|住坐|坐紅椅子|對坐|同坐|坐簿|圍坐|坐草|坐失良機|坐交椅|平起平坐|坐鐘|坐席|坐曹|坐家女兒|坐冷板凳|坐年|坐館|不忍坐視|坐騎|坐名|坐吃山空|四坐|割席分坐|坐江山|坐定|少坐|坐馳|坐客|坐擁書城|席地而坐|坐月子|從坐|因循坐誤|匡坐|坐殿|坐禪|上高坐|坐井觀天|團坐|坐具|坐下|坐守|宥坐器|坐更|坐功|存坐|坐嘯|坐夜|悶坐|乘坐|坐鎮|並坐|坐不垂堂|安坐待斃|坐賈|廣坐|坐落|坐不住|坐法|坐標|坐吃山崩|坐索|僭坐|坐蘿蔔|席坐|坐褥|坐薪嘗膽|寬坐|坐監|坐致|坐而待旦|坐食|坐帳|坐春風|坐骨|尻坐|危坐|坐困愁城|小坐|坐享其成|坐實|坐間|如坐鍼氈|主坐|坐墊|宴坐|如坐雲霧|列坐|坐部伎|坐立不安|乘機坐大|坐蠟|坐產招夫|如坐針氈|坐骨神經|坐不安席|就坐|如坐春風|坐坡|坐關|坐車|坐起|坐言起行|坐薪懸膽|坐蓐|坐臥不寧|坐臥不安|坐而待斃|坐罪|坐籌帷幄|坐窩子|坐視成敗|坐視|坐浴|坐檯子|坐標軸|坐板瘡|坐斷|坐收漁利|坐性|坐忘|坐廳|坐床撒帳|坐床富貴|坐富貴|坐家虎|坐失|坐天下|坐大|坐堂|坐地分贓|坐化|坐冷子|坐位|坐享|坐纛旂兒|坐隱|坐地|坐以待旦|坐喫山崩|坐轎|兀坐|坐莊|坐無車公|坐擁百城|兩坐|坐困|坐婆|乘亂坐大|敬陪末坐|盤腿而坐|禁坐|掇坐|打坐|搖席破坐|灌夫罵坐|法坐|燕坐|日坐愁城|正襟危坐|枕戈坐甲|整襟危坐|打酒坐|盤坐|稠人廣坐|打坐坡|看坐兒|擦坐|敦坐|歸坐|相坐|爭坐位帖|直角坐標|盤膝而坐|枯坐|環坐|發風罵坐|旁坐|橫坐標|極坐標|肅坐|行思坐想|隅坐|行坐|酒坐|縱坐標|箕坐|顒坐|連坐|靜坐|踞坐|緣坐|高坐|行思坐憶|竟坐|面壁坐禪|默坐|端坐|跛立箕坐|驚坐|罵坐灌夫|蹲坐|隨坐|行監坐守|行三坐五|趺坐|陪坐|閒坐|罵坐|行吟坐詠|起坐|跪坐|跂坐|落坐|行坐不安|行動坐臥}}
 
 {{zh-cat|Beginning}}
 
