--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -40,9 +40,10 @@
 {{zh-hanzi}}
 
 # to [[sit]]; to [[take]] a [[seat]]
+#: {{zh-x|坐下|to '''sit''' down}}
 # to [[go]] [[by]]; to [[travel]] by; to [[ride]]
-#: {{zh-x|我 坐 飛機 去 ^上海。|I go to Shanghai '''by''' plane.}}
-#: {{zh-x|她 開車 去， 不 坐 火車 去。|She does not go '''by''' train, she drives.}}
+#* {{zh-x|我 坐 飛機 去 ^上海。|I go to Shanghai '''by''' plane.}}
+#* {{zh-x|她 開車 去， 不 坐 火車 去。|She does not go '''by''' train, she drives.}}
 # {{zh-alt-form|座|[[seat]]}}
 # to [[bear]] [[fruit]]
 # {{lb|zh|literary}} [[because of]]; [[on the ground]] of
