--- a/en/惧/惧.15612.wikitext
+++ b/en/惧/惧.15612.wikitext
@@ -21,7 +21,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
 
-# {{defn|lang=ja|sort=心08}}
+# dread
 
 ====Readings====
 * {{ja-readings|on=[[く]] (ku), [[ぐ]] (gu)|kun=[[おそれる]] (osoreru)}}
