--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -38,8 +38,8 @@
 |c=zik6
 |h=pfs=ta̍t/chhṳ̍t
 |h_note=ta̍t - vernacular; chhṳ̍t - literary
-|mn=qz:tia̍k/xm,zz:te̍k/qz,tw,xm,zz:ti̍t/qz,tw,xm,zz:ta̍t
-|mn_note=tia̍k/te̍k - literary; ti̍t/ta̍t - vernacular
+|mn=xm,zz:te̍k/qz:tia̍k/ti̍t/ta̍t
+|mn_note=Mainland: te̍k/tia̍k - literary; ti̍t, ta̍t - vernacular<br>Taiwan: ti̍t - literary; ta̍t - vernacular
 |mn-t=dag8/dêg8
 |mn-t_note=dag8 - vernacular; dêg8 - literary
 |mc=y
