--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -234,6 +234,8 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * North Frisian: {{t|frr|Sjiisklun}} {{qualifier|Amrum}}, {{t|frr|Tjüschlönj}} {{qualifier|Mooring}}
 * Northern Sami: {{t|se|Duiska}}
 * Norwegian: {{t+|no|Tyskland}}, {{t|no|Føderale Republikken Tyskland}}
+*: Bokmål: {{t+|nb|Tyskland|n}}
+*: Nynorsk: {{t+|nn|Tyskland|n}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|Alemanha|f}}
 * Old Church Slavonic: {{t|cu|Нѣмьци|sc=Cyrs}}
