--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -233,7 +233,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Nepali: {{t|ne|जर्मनी|sc=Deva}}
 * North Frisian: {{t|frr|Sjiisklun}} {{qualifier|Amrum}}, {{t|frr|Tjüschlönj}} {{qualifier|Mooring}}
 * Northern Sami: {{t|se|Duiska}}
-* Norwegian: {{t+|no|Tyskland}}, {{t|no|Føderale Republikken Tyskland}}
+* Norwegian: 
 *: Bokmål: {{t+|nb|Tyskland|n}}
 *: Nynorsk: {{t+|nn|Tyskland|n}}
 * Novial: {{t-needed|nov}}
