--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -117,7 +117,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Dalmatian: {{t|dlm|faular}}
 * Danish: {{t+|da|tale}}
 * Dutch: {{t+|nl|spreken}}
-* Egyptian:
+* Egyptian: {{t|egy|𓆓𓂧|tr=ḏd}}
 *: {{t|egy|ḏd|sc=Egyp}}
 *: <hiero>D:d</hiero>
 * Esperanto: {{t|eo|paroli}}
