--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -70,11 +70,16 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * {{l|en|lose}}
 
 ====Derived terms====
+* {{l|en|hard-to-find}}
+
+====Related terms====
+{{rel4
+| {{l|en|find another gear}}
+| {{l|en|find fault}}
+| {{l|en|find one's feet}}
+| {{l|en|find out}}
+}}
 ''See also'' '''[[finding]]''' ''and'' '''[[found]]'''
-* {{l|en|find another gear}}
-* {{l|en|find fault}}
-* {{l|en|find one's feet}}
-* {{l|en|find out}}
 
 ====Translations====
 {{trans-top|encounter, locate, discover}}
