Reverted edits by [[Special:Contributions/2A01:CB05:8231:A600:20D3:D484:E059:6233|2A01:CB05:8231:A600:20D3:D484:E059:6233]]. If you think this rollback is in error, please leave a message on my talk page. <speak#41502119>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -117,7 +117,9 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Dalmatian: {{t|dlm|faular}}
 * Danish: {{t+|da|tale}}
 * Dutch: {{t+|nl|spreken}}
-* Egyptian: {{t|egy|𓆓𓂧|tr=ḏd}}
+* Egyptian:
+*: {{t|egy|ḏd|sc=Egyp}}
+*: <hiero>D:d</hiero>
 * Esperanto: {{t|eo|paroli}}
 * Estonian: {{t|et|rääkima}}
 * Finnish: {{t+|fi|puhua}}
