--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -41,7 +41,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=心10}}
 
-# {{defn|lang=ja|sort=心10}}
+# mercy
 
 ====Readings====
 {{ja-readings|goon=[[じ]] (ji)|kanon=[[し]] (shi)|kun=[[いつくしむ]] (itsukushimu), [[いつくしみ]] (itsukushimi)}}
