--- a/en/惰/惰.15621.wikitext
+++ b/en/惰/惰.15621.wikitext
@@ -41,7 +41,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=心09}}
 
-# {{defn|lang=ja|sort=心09}}
+# lazy
 
 ====Readings====
 * {{ja-readings|on=[[だ]] (da)|kun=[[おこたる]] (okotaru)}}
