--- a/en/慕/慕.15721.wikitext
+++ b/en/慕/慕.15721.wikitext
@@ -46,7 +46,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=心11}}
 
-# {{defn|lang=ja|sort=心11}}
+# pining
 
 ====Readings====
 * {{ja-readings|on=[[ぼ]] (bo)|kun=[[したう]] (shitau)}}
