--- a/en/愉/愉.15645.wikitext
+++ b/en/愉/愉.15645.wikitext
@@ -41,7 +41,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=心09}}
 
-# {{defn|lang=ja|sort=心09}}
+# pleasure
 
 ====Readings====
 * {{ja-readings|on=[[ゆ]] (yu), [[とう]] (tō)|kun=[[たのしむ]] (tanoshimu), [[たのしい]] (tanoshii)}}
