--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -620,7 +620,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|skära}} {{qualifier|with knife}}, {{t+|sv|klippa}} {{qualifier|with scissors}}
 * Welsh: {{t+|cy|torri}}
-* Yiddish: {{t|yi|שנײַדן}}
+* Yiddish: {{t|yi|שנײַדן}}, {{t|yi|שערן}}
 {{trans-bottom}}
 
 {{trans-top|to separate from prior association}}
