--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -25,7 +25,7 @@ Oracle bone form: {{Han compound|𡿧|日|ls=ic|t1=disaster; floods|t2=sun}} –
 |m=昔
 |c=sik1
 |md=sék
-|mn=sek
+|mn=qz:siak/tw,xm,zz:sek
 |w=4xiq
 |mc=y
 |oc=y
