t+cs:[[bodnutí]] ([[WT:EDIT|Assisted]]) <stab#41570335>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -41,6 +41,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{m|gd|stob||to prick, to prod, t
 {{trans-top|act of stabbing}}
 * Asturian: {{t|ast|puñalada|f}}
 * Catalan: {{t+|ca|punyalada|f}} (general), {{t+|ca|ganivetada|f}} (with knife)
+* Czech: {{t|cs|bodnutí}}
 * Dutch: {{t+|nl|steek}}
 * Finnish: {{t+|fi|pisto}}, {{t+|fi|pistäminen}}
 * French: {{t+|fr|percée|f}}
@@ -64,6 +65,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{m|gd|stob||to prick, to prod, t
 
 {{trans-top|wound made by stabbing}}
 * Catalan: {{t+|ca|punyalada|f}}, {{t+|ca|ganivetada|f}}
+* Czech: {{t|cs|bodnutí|n}}
 * Dutch: {{t|nl|steekwond}}
 * Finnish: {{t|fi|pistohaava}}
 * Galician: {{t|gl|puñalada|f}}
