--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -12,6 +12,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{m|gd|stob||to prick, to prod, t
 * {{audio|en-us-stab.ogg|Audio (US)|lang=en}}
 * {{hyphenation|stab|lang=en}}
 * {{rhymes|æb|lang=en}}
+[[Category:English 1-syllable words]]
 
 ===Noun===
 {{en-noun}}
