--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -12,6 +12,8 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * {{a|US}} {{enPR|vŏm'it}}, {{IPA|/ˈvɑmɪt/|lang=en}}
 * {{audio|En-us-vomit.ogg|audio (US)|lang=en}}
 
+[[Category:English 1-syllable words]]
+
 ===Verb===
 {{en-verb}}
 
