--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -8,6 +8,7 @@ From {{etyl|enm|en}} {{m|enm|bewteful}}, {{m|enm|beautefull||attractive to the e
 * {{audio|en-us-beautiful.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-beautiful.ogg|Audio (UK)|lang=en}}
 * {{hyphenation|beau|ti|ful|lang=en}}
+[[Category:English 3-syllable words]]
 
 ===Adjective===
 {{en-adj}}
