--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -70,12 +70,13 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * {{l|en|bridge mount}}
 * {{l|en|bridge the gap}}
 * {{l|en|bridge over troubled waters}}
+* {{l|en|covered bridge}}
 * {{l|en|cross that bridge when one comes to it}}
 * {{l|en|drawbridge}}
 * {{l|en|footbridge}}
 * {{l|en|ice bridge}}
-* {{l|en|Kelvin bridge}}
 {{rel-mid}}
+* {{l|en|Kelvin bridge}}
 * {{l|en|land bridge}}
 * {{l|en|low bridge}}
 * {{l|en|Maryland bridge}}
