--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -228,7 +228,7 @@ Inflected form of ''[[hatan|hātan]]''.
 * {{IPA|/heːt/|lang=ang}}
 
 ===Verb===
-{{head|ang|verb|head=hēt'''}}
+{{head|ang|verb|head=hēt}}
 
 # {{form of|first-person singular preterite form|hātan|lang=ang}}
 # {{form of|third-person singular preterite form|hātan|lang=ang}}
