--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -96,6 +96,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Georgian: {{t|ka|ხატი}}
 * German: {{t+|de|Ikone|f}}
 * Greek: {{t+|el|εικόνα|f}}, {{t+|el|εικόνισμα|n}}
+* Hebrew: {{t+|he|איקונין|m|tr=ikonín}}
 * Hungarian: {{t+|hu|ikon}}
 * Indonesian: {{t+|id|arca}}
 * Irish: {{t|ga|íocón|m}}
