/* Old English */ <port#41686561>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -668,7 +668,11 @@ From {{der|ang|la|portus}}.
 # {{l|en|portal}}: a [[door]] or [[gate]].
 # {{l|en|port}}: a [[harbor]] or [[harbor]]-[[town]], {{lb|ang|particularly}} with [[special]] [[trading]] [[privilege]]s.
 
+====Declension====
+{{rfinfl|ang|noun}}
+
 ====Derived terms====
+* {{l|ang|Portesmūþa}}
 * {{l|ang|port-ġerēfa}}
 
 ----
