--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -106,6 +106,7 @@ From {{etyl|enm|en}} {{m|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, from 
 * Galician: {{t+|gl|empurrar}}, {{t|gl|empuxar}}
 * German: {{t+|de|drücken}}, {{t+|de|schieben}}, {{t+|de|stoßen}}
 * Greek: {{t+|el|σπρώχνω|sc=Grek}}
+*: Ancient: {{t|grc|ὠθέω}}
 * Hindi: {{t+|hi|धकेलना|tr=dhakelnā|sc=Deva}}
 * Hungarian: {{t+|hu|tol}}, {{t|hu|megtol}}, {{t+|hu|lök}}
 * Icelandic: {{t|is|hrinda}}, {{t+|is|ýta}}
