/* Old English */ <port#41689034>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -659,21 +659,61 @@ From {{inh|nn|gmq-mno|portr|g=m}}, from late {{inh|nn|non|port|g=n}}, from {{der
 
 ==Old English==
 
-===Etymology===
-From {{der|ang|la|portus}}.
+===Pronunciation===
+{{rfp|ang}}
 
-===Noun===
+===Etymology 1===
+{{bor|ang|la|portus||harbour”, “port”, “haven”, “warehouse}}
+
+====Noun====
 {{ang-noun|m}}
 
-# {{l|en|portal}}: a [[door]] or [[gate]].
-# {{l|en|port}}: a [[harbor]] or [[harbor]]-[[town]], {{lb|ang|particularly}} with [[special]] [[trading]] [[privilege]]s.
+# a {{l|en|port}}, a {{l|en|haven}} {{gloss|a {{l|en|harbor|harbour}} {{n-g|or}} harbor-town}}
+# a {{l|en|town}}, {{n-g|particularly one}} with special trading privileges
 
-====Declension====
-{{rfinfl|ang|noun}}
+=====Declension=====
+{{rfinfl|ang|noun}}{{attention|ang|The forms “port”, “porte”, “portes”, and “portas” are attested.}}
 
-====Derived terms====
+=====Derived terms=====
+{{col-top|4}}
+* {{l|ang|portcwēn|g=f}}
 * {{l|ang|Portesmūþa}}
-* {{l|ang|port-ġerēfa}}
+* {{l|ang|portgeat|g=n}}
+* {{l|ang|portġerēfa|g=m}}
+* {{l|ang|portgeriht|g=n}}
+* {{l|ang|portherepaþ|g=m}}
+* {{l|ang|portmann|g=m}}
+* {{l|ang|portstrǣt|g=f}}
+* {{l|ang|portwara|g=m}}
+* {{l|ang|portweall|g=m}}
+* {{l|ang|portweg|g=m}}
+* {{l|ang|portwer|g=m}}
+{{col-bottom}}
+
+=====Descendants=====
+* Middle English: {{l|enm|port}}
+** English: {{l|en|port}}
+
+====References====
+* “[http://www.bosworthtoller.com/page/b0776 port]” on pages 776–777 of the ''[[w:An Anglo-Saxon Dictionary|Bosworth–Toller Anglo-Saxon Dictionary]]'' (1898)
+
+===Etymology 2===
+{{bor|ang|la|porta||gate”, “entrance”, “passage”, “door}}
+
+====Noun====
+{{ang-noun|m}}
+
+# {{l|en|portal}} {{gloss|a {{l|en|door}} {{n-g|or}} {{l|en|gate}}, an {{l|en|entrance}}}}
+
+=====Declension=====
+{{rfinfl|ang|noun}}{{attention|ang|The forms “port”, “portas”, and “portum” are attested.}}
+
+=====Descendants=====
+* Middle English: {{l|enm|port}}
+** English: {{l|en|port}}
+
+====References====
+* “[http://www.bosworthtoller.com/page/b0777 port]” on page 777 of the ''Bosworth–Toller Anglo-Saxon Dictionary'' (1898)
 
 ----
 
