--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -677,7 +677,7 @@ From {{inh|nn|gmq-mno|portr|g=m}}, from late {{inh|nn|non|port|g=n}}, from {{der
 =====Derived terms=====
 {{col-top|4}}
 * {{l|ang|portcwēn|g=f}}
-* {{l|ang|Portesmūþa}}
+* {{l|ang|Portesmūþa|g=m}}
 * {{l|ang|portgeat|g=n}}
 * {{l|ang|portġerēfa|g=m}}
 * {{l|ang|portgeriht|g=n}}
