--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -713,7 +713,7 @@ From {{inh|nn|gmq-mno|portr|g=m}}, from late {{inh|nn|non|port|g=n}}, from {{der
 ** English: {{l|en|port}}
 
 ====References====
-* “[http://www.bosworthtoller.com/page/b0777 port]” on page 777 of the ''Bosworth–Toller Anglo-Saxon Dictionary'' (1898)
+* “[http://www.bosworthtoller.com/page/b0777 port]” on page 777/1 of the ''Bosworth–Toller Anglo-Saxon Dictionary'' (1898)
 
 ----
 
