t+ny:[[njerwa]] ([[WT:EDIT|Assisted]]) <brick#41700082>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -77,6 +77,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Bulgarian: {{t+|bg|ту́хла|f|sc=Cyrl}}
 * Burmese: {{t+|my|အုတ်|sc=Mymr}}
 * Catalan: {{t+|ca|maó|m}}
+* Chichewa: {{t|ny|njerwa}}
 * Chinese:
 *: Mandarin: {{t+|cmn|磚塊|sc=Hani}}, {{t+|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t+|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Crimean Tatar: {{t|crh|tola}}, {{t|crh|kirpiç}}
