/* Norwegian Bokmål */ derived terms <felt#41713351>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -230,6 +230,7 @@ From {{der|nb|de|Feld}}
 {{mid2}}
 * {{l|nb|magnetfelt}}
 * {{l|nb|minefelt}}
+* {{l|nb|nedbørfelt}}
 * {{l|nb|oljefelt}}
 {{bottom}}
 
