--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -277,6 +277,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Czech: {{t+|cs|mluvit}}
 * Danish: {{t|da|snakke}}
 * Dutch: {{t+|nl|spreken}}
+* Esperanto: {{t|eo|paroli}}
 * Estonian: {{t|et|rääkima}}
 * Finnish: {{t+|fi|puhua}}
 * French: {{t+|fr|parler}}
