--- a/en/坾/坾.13057.wikitext
+++ b/en/坾/坾.13057.wikitext
@@ -12,15 +12,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[cyu5]]|y=chyu5}}
+===Pronunciation===
+{{zh-pron
+|m=zhù
+|c=cyu5
+|mc=
+|oc=
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
 
@@ -33,15 +44,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[ちょ]] (cho), [[じょ]] (jo)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhù]] ([[zhu4]])|wg=chu<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 [[fr:坾]]
 [[hu:坾]]
