--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -337,7 +337,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Tatar: {{t+|tt|май}}
 * Telugu: {{t+|te|వెన్న}}
 * Tetum: {{t|tet|manteiga}}
-* Thai: {{t+|th|เนย|tr=noey|sc=Thai}}
+* Thai: {{t+|th|เนย|sc=Thai}}
 * Tibetan: {{t|bo|མར།|sc=Tibt}}
 * Tok Pisin: {{t|tpi|bata}}
 * Turkish: {{t+|tr|tereyağı}}
