t+yi:[[ברעכן]] t+yi:[[אויסברעכן]] t+yi:[[צוריקגעבן]] ([[WT:EDIT|Assisted]]) <vomit#41823599>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -127,6 +127,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Venetian: {{t|vec|gomitar}}, {{t|vec|vomegar}}, {{t|vec|rénder}}, {{t|vec|réndar}}, {{t|vec|riméter}}, {{t+|vec|rimétar}}, {{t|vec|reméter}}, {{t|vec|remétar}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 * Welsh: {{t+|cy|chwydu}}
+* Yiddish: {{t|yi|ברעכן}}, {{t|yi|אויסברעכן}}, {{t|yi|צוריקגעבן}}
 * Zazaki: {{t|zza|vırecen}}
 {{trans-bottom}}
 
