--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -46,13 +46,13 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Aromanian: {{t|rup|vom}}, {{t|rup|vomu}}
 * Asturian: {{t|ast|vomitar}}
 * Azeri: {{t+|az|qusmaq}}
-* Belarusian: {{t|be|ванітава́ць|impf|sc=Cyrl}}, {{t|be|блява́ць|impf|sc=Cyrl}}, {{t|be|рваць|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t|be|рыга́ць|impf|sc=Cyrl}}
-* Bulgarian: {{t+|bg|повръ̀щам|impf|sc=Cyrl}}, {{t+|bg|бълва́м|impf|sc=Cyrl}}
-* Burmese: {{t+|my|အန်|sc=Mymr}}
+* Belarusian: {{t|be|ванітава́ць|impf}}, {{t|be|блява́ць|impf}}, {{t|be|рваць|impf}} {{qualifier|impersonal}}, {{t|be|рыга́ць|impf}}
+* Bulgarian: {{t+|bg|повръ̀щам|impf}}, {{t+|bg|бълва́м|impf}}
+* Burmese: {{t+|my|အန်}}
 * Catalan: {{t+|ca|vomitar}}
 * Chinese:
-*: Cantonese: {{t|yue|嘔|sc=Hani}}, {{t|yue|呕|tr=au2|sc=Hani}}
-*: Mandarin: {{t+|cmn|嘔吐|sc=Hani}}, {{t+|cmn|呕吐|tr=ǒutù|sc=Hani}}, {{t+|cmn|嘔|sc=Hani}}, {{t+|cmn|呕|tr=ǒu|sc=Hani}}, {{t+|cmn|吐|tr=tù|sc=Hani}}
+*: Cantonese: {{t|yue|嘔}}, {{t|yue|呕|tr=au2}}
+*: Mandarin: {{t+|cmn|嘔吐}}, {{t+|cmn|呕吐|tr=ǒutù}}, {{t+|cmn|嘔}}, {{t+|cmn|呕|tr=ǒu}}, {{t+|cmn|吐|tr=tù}}
 * Czech: {{t+|cs|zvracet|impf}}
 * Dalmatian: {{t|dlm|gombro}}, {{t|dlm|gomituor}}
 * Danish: {{t+|da|brække sig}}, {{t+|da|kaste op}}
@@ -70,22 +70,22 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 *: Ancient: {{t|grc|ἐμέω}}, {{t|grc|ἐξεμέω}}
 * Greenlandic: {{t|kl|meriarpoq}}
 * Hebrew: {{t|he|הֵקִיא|tr=hekí}}
-* Hindi: {{t|hi|उल्टी करना|tr=ulṭī karnā|sc=Deva}}, {{t|hi|वमन करना|tr=vaman karnā|sc=Deva}}
+* Hindi: {{t|hi|उल्टी करना}}, {{t|hi|वमन करना}}
 * Hungarian: {{t+|hu|hány}}
 * Icelandic: {{t+|is|æla}}, {{t|is|gubba}}, {{t|is|spúa}}, {{t+|is|spýja}}, {{t|is|kasta upp}}
 * Indonesian: {{t+|id|memuntahkan}}, {{t+|id|muntah}}
 * Irish: {{t|ga|aisig}}, {{t|ga|bréitseáil}}, {{t|ga|caith aníos}}, {{t|ga|cuir aníos}}, {{t|ga|caith suas}}, {{t|ga|sceathraigh}}, {{t|ga|sceith}}, {{t|ga|urlaic}}
-*: Old Irish: {{t|sga|sceid|alt=sceïd}}
+*: Old Irish: {{t|sga|sceïd}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
-* Japanese: {{t+|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t+|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する|sc=Jpan}}, {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
+* Japanese: {{t+|ja|吐く|tr=[[はく]], haku}}, {{t+|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する}}, {{t|ja|戻す|tr=もどす, modosu}}
 * Jarai: {{t|jra|ŏ}}
 * Karelian: {{t|krl|oksendua}}
-* Kazakh: {{t+|kk|құсу|sc=Cyrl}}
-* Khmer: {{t+|km|ក្អួត|tr=k’uət|sc=Khmr}}
+* Kazakh: {{t+|kk|құсу}}
+* Khmer: {{t+|km|ក្អួត|tr=k’uət}}
+* Korean: {{t+|ko|게우다}}
 {{trans-mid}}
-* Korean: {{t+|ko|게우다|sc=Kore}}
-* Kyrgyz: {{t|ky|кусуу|sc=Cyrl}}
-* Lao: {{t|lo|ອາຈຽນ|sc=Laoo}}, {{t|lo|ສຳຮາກ|sc=Laoo}}, {{t|lo|ອົ້ວະ|sc=Laoo}}, {{t|lo|ຮາກ|sc=Laoo}}, {{t|lo|ລົງຮາກ|sc=Laoo}}
+* Kyrgyz: {{t|ky|кусуу}}
+* Lao: {{t|lo|ອາຈຽນ}}, {{t|lo|ສຳຮາກ}}, {{t|lo|ອົ້ວະ}}, {{t|lo|ຮາກ}}, {{t|lo|ລົງຮາກ}}
 * Latin: {{t|la|vomō}}, {{t|la|vomitō}}
 * Latvian: {{t+|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti}}
@@ -93,12 +93,12 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Malay: {{t|ms|muntah}}
 * Maltese: {{t|mt|irrimetta}}, {{t|mt|qala'}}
 * Maori: {{t|mi|ruaki}}
-* Mongolian: {{t+|mn|бөөлжис|sc=Cyrl}}
+* Mongolian: {{t+|mn|бөөлжис}}
 * Neapolitan: {{t|nap|reverzà}}, {{t|nap|jettà}}, {{t|nap|vummecà}}
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t|no|brekke seg}}
 * Occitan: {{t|oc|vomir}}
 * Old Norse: {{t|non|spýja}}
-* Persian: {{t+|fa|قی کردن|tr=qay kardan|sc=fa-Arab}}
+* Persian: {{t+|fa|قی کردن|tr=qay kardan}}
 * Polish: {{t+|pl|wymiotować}}, {{t+|pl|rzygać|impf}}
 * Portuguese: {{t+|pt|vomitar}}, {{t+|pt|regurgitar}}
 * Quechua: {{t|qu|aqtuy}}
@@ -107,8 +107,8 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Romansch: {{t|rm|render}}, {{t|rm|vomitar}}
 * Russian: {{t+|ru|блева́ть|impf}}, {{t+|ru|рвать|impf}} {{qualifier|impersonal}}, {{t+|ru|тошни́ть|impf}} {{qualifier|impersonal, to feel sick}}, {{t+|ru|рыга́ть|impf}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|ригати|impf|sc=Cyrl}}, {{t|sh|збљувати|pf|sc=Cyrl}}, {{t|sh|повратити|pf|sc=Cyrl}}, {{t|sh|бљувати|impf|sc=Cyrl}}, {{t|sh|повраћати|impf|sc=Cyrl}}, {{t|sh|ригати|impf}}
-*: Roman: {{t+|sh|rigati|impf}}, {{t|sh|zbljuvati|pf}}, {{t+|sh|povratiti|pf}}, {{t+|sh|bljuvati|impf}}, {{t+|sh|povraćati|impf}}, {{t+|sh|rigati|impf}}
+*: Cyrillic: {{t|sh|ри̏гати|impf}}, {{t|sh|збљувати|pf}}, {{t|sh|повра́тити|pf}}, {{t|sh|бљу̀вати|impf}}, {{t|sh|по̀враћати|impf}}
+*: Roman: {{t+|sh|rȉgati|impf}}, {{t|sh|zbljuvati|pf}}, {{t+|sh|povrátiti|pf}}, {{t+|sh|bljùvati|impf}}, {{t+|sh|pòvraćati|impf}}
 * Slovak: {{t|sk|zvracať|impf}}
 * Slovene: {{t+|sl|bruhati|impf}}
 * Sorbian:
@@ -117,12 +117,12 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Sundanese: {{t|su|luga}}, {{t|su|utah}}
 * Swahili: {{t|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}, {{t|sv|kasta upp}}
-* Tajik: {{t|tg|қай кардан|sc=Cyrl}}
-* Tamil: {{t+|ta|குமட்டு|sc=Taml}}, {{t+|ta|உவட்டு|sc=Taml}}, {{t|ta|உவாந்தி|sc=Taml}}, {{t+|ta|வாந்தி|sc=Taml}}
-* Thai: {{t+|th|อาเจียน|tr=aa jian|sc=Thai}}, {{t+|th|อ้วก|tr=ûak|sc=Thai}}
+* Tajik: {{t|tg|қай кардан}}
+* Tamil: {{t+|ta|குமட்டு}}, {{t+|ta|உவட்டு}}, {{t|ta|உவாந்தி}}, {{t+|ta|வாந்தி}}
+* Thai: {{t+|th|อาเจียน}}, {{t+|th|อ้วก}}
 * Turkish: {{t+|tr|kusmak}}
 * Turkmen: {{t|tk|gusmak}}
-* Ukrainian: {{t+|uk|блюва́ти|impf|sc=Cyrl}}, {{t|uk|рва́ти|impf|sc=Cyrl}} {{qualifier|impersonal}}, {{t|uk|рига́ти|impf|sc=Cyrl}}
+* Ukrainian: {{t+|uk|блюва́ти|impf}}, {{t|uk|рва́ти|impf}} {{qualifier|impersonal}}, {{t|uk|рига́ти|impf}}
 * Uzbek: {{t+|uz|qusmoq}}
 * Venetian: {{t|vec|gomitar}}, {{t|vec|vomegar}}, {{t|vec|rénder}}, {{t|vec|réndar}}, {{t|vec|riméter}}, {{t+|vec|rimétar}}, {{t|vec|reméter}}, {{t|vec|remétar}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
@@ -150,10 +150,10 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Asturian: {{t|ast|vómitu|m}}
 * Catalan: {{t|ca|vòmit|m}}
 * Chinese:
-*: Mandarin: {{t+|cmn|嘔吐物|sc=Hani}}, {{t+|cmn|呕吐物|tr=ǒutùwù|sc=Hani}}
+*: Mandarin: {{t+|cmn|嘔吐物}}, {{t+|cmn|呕吐物|tr=ǒutùwù}}
 * Czech: {{t|cs|zvratky|m-p}}
 * Danish: {{t+|da|bræk|n}}, {{t+|da|opkast|n}}
-* Dutch: {{t|nl|braaksel}}, {{qualifier|colloquial}} {{t+|nl|kots}}
+* Dutch: {{t|nl|braaksel}}, {{t+|nl|kots}} {{qualifier|colloquial}}
 * Estonian: {{t+|et|okse}}
 * Finnish: {{t+|fi|oksennus}}
 * French: {{t+|fr|vomi|m}}
@@ -166,20 +166,20 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Hungarian: {{t+|hu|hányás}}, {{t+|hu|hányadék}}
 * Irish: {{t|ga|aiseag|m}}, {{t|ga|bréitse|m}}, {{t|ga|cur|m}}, {{t|ga|múisc|f}}, {{t|ga|orla|m}}, {{t|ga|sceathrach|f}}, {{t|ga|sceith|f}}, {{t|ga|urlacan|m}}
 * Italian: {{t+|it|vomito|m}}
-* Japanese: {{t|ja|反吐|tr=へど, hedo|sc=Jpan}}
-* Kazakh: {{t|kk|лоқсу|sc=Cyrl}}
-* Khmer: {{t|km|កំអួត|tr=kɑm’uət|sc=Khmr}}
+* Japanese: {{t|ja|反吐|tr=へど, hedo}}
+* Kazakh: {{t|kk|лоқсу}}
+* Khmer: {{t|km|កំអួត|tr=kɑm’uət}}
 * Korean: {{t-needed|ko}}
 {{trans-mid}}
 * Kurdish:
-*: Sorani: {{t|ckb|ڕشانه‌وه‌|sc=ku-Arab}}
+*: Sorani: {{t|ckb|ڕشانه‌وه‌}}
 * Latin: {{t|la|vomitus|m}}
 * Latvian: {{t|lv|vēmekļi|m-p}}
 * Lithuanian: {{t|lt|vėmalai|p}}
-* Macedonian: {{t|mk|повраќаница|f|tr=povraḱánica}}, {{t|mk|блујавица|f|tr=blujávica}}
+* Macedonian: {{t|mk|повраќа́ница|f}}, {{t|mk|блуја́вица|f}}
 * Malay: {{t|ms|muntahan}}
 * Maltese: {{t|mt|rimettar}}
-* Mongolian: {{t+|mn|бөөлжис|sc=Cyrl}}
+* Mongolian: {{t+|mn|бөөлжис}}
 * Norwegian: {{t+|no|oppkast|n}}, {{t+|no|spy|n}}
 * Occitan: {{t|oc|vòmit|m}}
 * Polish: {{t+|pl|wymiociny|p}}
@@ -187,14 +187,14 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Romanian: {{t+|ro|vomă|f}}
 * Russian: {{t+|ru|блево́тина|f}}, {{t+|ru|рво́та|f}}
 * Serbo-Croatian:
-*: Roman: {{t|sh|povraćka|f}}, {{t+|sh|bljuvotina|f}}, {{t+|sh|povraćaj|m}}, {{t|sh|izbljuvak|m}}
+*: Roman: {{t|sh|povraćka|f}}, {{t+|sh|bljùvotina|f}}, {{t+|sh|povraćaj|m}}, {{t|sh|izbljuvak|m}}
 * Spanish: {{t+|es|vómito|m}}
 * Swedish: {{t+|sv|spya}}
-* Tamil: {{t+|ta|வாந்தி|tr=vānti|sc=Taml}}
-* Telugu: {{t+|te|వాంతి|tr=vaamthi|sc=Telu}}
+* Tamil: {{t+|ta|வாந்தி}}
+* Telugu: {{t+|te|వాంతి}}
 * Turkish: {{t+|tr|kusmuk}}, {{t+|tr|kusuntu}}
-* Ukrainian: {{t+|uk|блювота|f|tr=bljuvóta|sc=Cyrl}}, {{t+|uk|блювотиння|n|tr=bljuvotýnnja|sc=Cyrl}}
-* Urdu: {{t|ur|الٹى|sc=ur-Arab}}
+* Ukrainian: {{t+|uk|блюво́та|f}}, {{t+|uk|блювоти́ння|n}}
+* Urdu: {{t|ur|الٹى}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 * Zazaki: {{t|zza|vırte}}
 {{trans-bottom}}
@@ -203,8 +203,8 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Georgian: {{t|ka|პირღებინება}}, {{t|ka|ჩანჩქერო}}, {{t+|ka|ღებინება}}, {{t|ka|რწყევა}}
 * Hebrew: {{t+|he|הֲקָאָה|f|tr=haka'á}}
 * Irish: {{t|ga|orla|m}}, {{t|ga|sceathrach|f}}, {{t|ga|taoisceáil|f}}, {{t|ga|tonntaoscadh|m}} {{qualifier|sudden}}, {{t|ga|urlacan|m}}
-* Kazakh: {{t|kk|лоқсу|sc=Cyrl}}
 {{trans-mid}}
+* Kazakh: {{t|kk|лоқсу}}
 * Maori: {{t|mi|ruakitanga}}
 * Romanian: {{t+|ro|vomare|f}},  {{t+|ro|vomitare|f}}, {{t+|ro|vărsare|f}}, {{t|ro|borâre|f}} {{qualifier|popular}}
 {{trans-bottom}}
