Remove global image <Israel#41831744>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,7 +1,6 @@
 {{also|israel|Ísrael|Israèl|İsrael|Israël}}
-[[File:Emblem of Israel.svg|thumb|Emblem of Israel]]
 ==English==
-{{wikipedia}}
+[[File:Emblem of Israel.svg|thumb|Emblem of Israel]]
 
 ===Alternative forms===
 * {{l|en|Isr.}} {{qualifier|abbreviation}}
@@ -233,6 +232,9 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * {{l|en|resail}}
 * {{l|en|sailer}}
 * {{l|en|serial}}
+
+===External links===
+* {{pedia}}
 
 [[Category:en:Countries of Asia]]
 [[Category:en:Israel]]
