--- a/en/t/The Netherlands.2110.wikitext
+++ b/en/t/The Netherlands.2110.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Proper noun===
-{{en-proper noun}}
+{{en-proper noun|head=[[the|The]] [[Netherlands]]}}
 
 # {{alternative spelling of|Netherlands|lang=en}}
 
