--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -6,7 +6,8 @@
 * {{sense|dated}} {{l|en|ex. gr.}}, {{l|en|e. g.}}
 
 ===Etymology===
-A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grātiā||[[for the sake of]] an [[example]]}}.<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', ISBN 9780553590128.</ref>
+it true that it is eg like if you say fx in danish it is eg in english
+OssurHM
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˌiːˈdʒiː/|/fɔː(ɹ) ɪɡˈzɑːmpəl/|lang=en}} (''See [[#Usage notes|Usage below]]'')
