--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -54,7 +54,7 @@
 *: West Frisian: {{t|fy|Tsjechje}}
 * Georgian: {{t|ka|ჩეხეთის რესპუბლიკა|sc=Geor}}, {{t|ka|ჩეხეთი|sc=Geor}}
 * German: {{t+|de|Tschechische Republik|f}}, {{t+|de|Tschechien|n}}, rarely {{t+|de|Tschechei|f}}
-* Greek: {{t|el|Δημοκρατία της Τσεχίας|f}}, {{t+|el|Τσεχία|f}}
+* Greek: {{t+|el|Τσεχία|f}}
 *: Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}, {{t|pnt|Τσεχία}}
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
 * Hebrew: {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit}}, {{t|he|צ'כיה|f|tr=chekhia|sc=Hebr}}
