--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -516,6 +516,7 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 
 [[Category:English basic words]]
 [[Category:en:Bridges]]
+[[Category:en:Bridge]]
 
 ----
 
