t+tl:[[Hugoslabya]] t-balance ([[WT:EDIT|Assisted]]) <Yugoslavia#41869354>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -45,8 +45,8 @@
 * Italian: {{t|it|Jugoslavia}}, {{t+|it|Iugoslavia|f}}
 * Japanese: {{t|ja|ユーゴスラビア|tr=Yūgosurabia}}, {{t|ja|ユーゴスラヴィア|tr=Yūgosuravia}}
 * Kazakh: {{t|kk|Югославия|sc=Cyrl}}
-{{trans-mid}}
 * Korean: {{t+|ko|유고슬라비아}}
+{{trans-mid}}
 * Kyrgyz: {{t|ky|Югославия|sc=Cyrl}}
 * Latvian: {{t|lv|Dienvidslāvija|f}}
 * Macedonian: {{t+|mk|Југославија|f}}
@@ -68,6 +68,7 @@
 * Slovene: {{t+|sl|Jugoslávija|f}}
 * Spanish: {{t+|es|Yugoslavia|f}}, {{t|es|Yugoeslavia|f}}
 * Swedish: {{t+|sv|Jugoslavien}}
+* Tagalog: {{t|tl|Hugoslabya}}
 * Thai: {{t|th|ยูโกสลาเวีย|tr=yoogòhtlaawia}}
 * Turkish: {{t+|tr|Yugoslavya}}
 * Turkmen: {{t|tk|Ýugoslawiýa}}
