/* Etymology */ edited using [[User:Dixtosa/AjaxEdit.js|AjaxEdit]] <春#41886674>

--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -24,7 +24,7 @@ There are minor differences in where the last stroke of the top component (top-l
 ==Chinese==
 {{zh-forms}}
 
-===Etymology===
+===Glyph origin===
 {{Han etyl}}
 {{Han compound|艹|t1=grass|屯|t2=sprout|日|t3=sun|ls=psc|c1=s|c2=p|c3=s}}.
 
