--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -33,6 +33,7 @@ The character {{lang|zh|春}} itself is probably a variant of {{och-l|屯}} as t
 ===Pronunciation===
 {{zh-pron
 |m=chūn
+|m-s=chun1
 |c=ceon1
 |h=pfs=chhûn
 |md=chŭng
