--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -181,7 +181,7 @@ From {{inh|oc|pro|libre}}, from {{inh|oc|la|liber|liber, librum|book}}.
 ==Old Provençal==
 
 ===Etymology===
-From {{inh|pro|la|liber|liber, librum}}. [[Gallo-Romance]] cognate with {{cog|fro|livre}}.
+From {{inh|pro|la|liber|liber, librum}}. Gallo-Romance cognate with {{cog|fro|livre}}.
 
 ===Noun===
 {{pro-noun|m}}
