--- a/en/r/représentant.1838.wikitext
+++ b/en/r/représentant.1838.wikitext
@@ -2,8 +2,8 @@
 ==French==
 
 ===Pronunciation===
+* {{fr-IPA}}
 * {{audio|Fr-représentant.ogg|audio|lang=fr}}
-* {{IPA|/ʁə.pʁe.zɑ̃.tɑ̃/|lang=fr}}
 
 ===Verb===
 {{head|fr|present participle}}
