t+mi:[[kōpana]] ([[WT:EDIT|Assisted]]) <push#41925556>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -124,6 +124,7 @@ From {{etyl|enm|en}} {{m|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, from 
 * Latvian: {{t|lv|grūst}}
 * Macedonian: {{t|mk|турка|tr=túrka|sc=Cyrl}}, {{t|mk|бутка|tr=bútka|sc=Cyrl}}
 * Malay: {{t|ms|tolak}}
+* Maori: {{t|mi|kōpana}}
 * Neapolitan: {{t|nap|vottà}}
 * Norwegian: {{t|no|dytte}}, {{t|no|skubbe}}
 * Occitan: {{t+|oc|butar}}
