--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -41,7 +41,7 @@
 {{trans-top|country}}
 * Acehnese: {{t|ace|Peurancih}}
 * Afrikaans: {{t+|af|Frankryk}}
-* Albanian: {{t+|sq|Franca}}, {{t|sq|Galia}}
+* Albanian: {{t+|sq|Franca|f}}, {{t|sq|Galia|f}}
 * American Sign Language: {{t|ase|F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist}}
 * Antillean Creole: {{t|gcf|Lafrans}}
 * Arabic: {{t+|ar|فَرَنْسَا|f}}, {{qualifier|archaic}} {{t|ar|بِلَاد اَلْإِفْرَنْج|f-p}}, {{qualifier|archaic}} {{t|ar|بِلَاد اَلْفِرِنْجَة|f-p}}
@@ -55,10 +55,10 @@
 * Bashkir: {{t|ba|Франция|sc=Cyrl}}
 * Basque: {{t+|eu|Frantzia}}
 * Belarusian: {{t|be|Фра́нцыя|f}}
-* Bengali: {{t|bn|ফ্রান্স|tr=phrans|sc=Beng}}
+* Bengali: {{t|bn|ফ্রান্স|sc=Beng}}
 * Breton: {{t+|br|Frañs}} {{qualifier|state}}, {{t+|br|Bro-C'hall}} {{qualifier|country}}
 * Bulgarian: {{t+|bg|Фра́нция|f}}
-* Burmese: {{t|my|ပြင်သစ်နိုင်ငံ|sc=Mymr}}
+* Burmese: {{t|my|ပြင်သစ်|sc=Mymr}}
 * Catalan: {{t+|ca|França|f}}
 * Cebuano: {{t|ceb|Pransiya}}
 * Cherokee: {{t|chr|ᎦᎸᏥᏱ|sc=Cher}}
@@ -85,7 +85,7 @@
 * Georgian: {{t|ka|საფრანგეთი}}
 * German: {{t+|de|Frankreich|n}}
 * Greek: {{t+|el|Γαλλία|f}}
-* Gujarati: {{t|gu|ફ્રાન્સ|tr=phrāns|sc=Gujr}}
+* Gujarati: {{t|gu|ફ્રાન્સ|sc=Gujr}}
 * Haitian Creole: {{t|ht|Frans}}
 * Hausa: {{t|ha|Faransa|f|alt=Fàr̃ansà}}
 * Hawaiian: {{t|haw|Palani}}
@@ -107,12 +107,12 @@
 * Kannada: {{t+|kn|ಪ್ರಾಂಸ್}}
 * Kashmiri: {{t|ks|फ्रांस|sc=ks-Arab}}
 * Kazakh: {{t+|kk|Франция}}
-* Khmer: {{t+|km|បារាំង|sc=Khmr|tr=baarang}}, {{t|km|ប្រទេសបារាំង|sc=Khmr|tr=prɑteih baarang}}
+* Khmer: {{t+|km|បារាំង|sc=Khmr|tr=baarang}}
 * Kikuyu: {{t|ki|Frans}}
 * Korean: {{t|ko|^프랑스|sc=Hang}}
 * Kurdish:
 *: Sorani: {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
-* Lao: {{t+|lo|ປະເທດຝະລັ່ງ|sc=Laoo}}
+* Lao: {{t+|lo|ຝະລັ່ງ|sc=Laoo}}
 {{trans-mid}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}, {{t|la|Francogallia}}
 * Latvian: {{t+|lv|Francija|f}}
@@ -131,7 +131,7 @@
 * Malayalam: {{t|ml|ഫ്രാൻസ്}}
 * Maltese: {{t+|mt|Franza|f}}
 * Maori: {{t|mi|Parani}}, {{t+|mi|Wīwī}}
-* Marathi: {{t|mr|फ्रांस|tr=phrāns|sc=Deva}}
+* Marathi: {{t|mr|फ्रांस|sc=Deva}}
 * Meru: {{t|mer|Frans}}
 * Mongolian: {{t+|mn|Франц}}, {{t|mn|Франц улс}}
 * Nauruan: {{t|na|France}}
@@ -143,7 +143,8 @@
 * Norwegian: {{t+|no|Frankrike}} (Franske Republikk, Republikken Frankrike)
 * Novial: {{t|nov|Fransia}}
 * Occitan: {{t+|oc|França|f}}
-* Old Church Slavonic: {{t|cu|Франкїꙗ|sc=Cyrs}}
+* Old Church Slavonic:
+*: Cyrillic: {{t|cu|Франкїꙗ|f|sc=Cyrs}}
 * Old English: {{t|ang|Francland}}
 * Ossetian: {{t|os|Франц}}
 * Pashto: {{t+|ps|فرانسه|tr=frânsa|sc=ps-Arab}}, {{t|ps|فرانس|tr=frâns|sc=ps-Arab}}
@@ -179,7 +180,7 @@
 * Tajik: {{t+|tg|Фаронса}}
 * Tamil: {{t|ta|பிரான்ஸ்}}
 * Telugu: {{t+|te|ఫ్రాన్స్}}
-* Thai: {{t+|th|ฝรั่งเศส|tr=fàràngsèt}}
+* Thai: {{t+|th|ฝรั่งเศส}}
 * Tok Pisin: {{t|tpi|Pranis}}
 * Turkish: {{t+|tr|Fransa}}
 * Turkmen: {{t|tk|Fransiýa}}
