--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -130,14 +130,14 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Basque: {{t+|eu|Alemania}}
 * Bavarian: {{t|bar|Deitschland|n}}
 * Belarusian: {{t|be|Герма́нія|f}}, {{t|be|Няме́ччына|f|sc=Cyrl}}
-* Bengali: {{t|bn|জার্মানি|tr=jarmani}}
+* Bengali: {{t|bn|জার্মানি}}
 * Bikol Central: {{t|bcl|Alemanya}}
 * Bishnupriya Manipuri: {{t|bpy|জার্মানি}}
 * Bislama: {{t|bi|Jemani}}
 * Breton: {{t|br|Alamagn}}
 * Buginese: {{t|bug|Jerman}}
 * Bulgarian: {{t+|bg|Герма́ния|f}}
-* Burmese: {{t|my|ဂျာမနီနိုင်ငံ}}, {{t|my|ဂျာမနီ|sc=Mymr}}
+* Burmese: {{t|my|ဂျာမနီ|sc=Mymr}}
 * Catalan: {{t+|ca|Alemanya|f}}, {{t+|ca|Alemània|f}}
 * Cherokee: {{t+|chr|ᎠᏛᏥ|sc=Cher}}
 * Chinese:
@@ -147,7 +147,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Cornish: {{t+|kw|Almayn}}
 * Crimean Tatar: {{t|crh|Almaniya}}
 * Czech: {{t+|cs|Německo|n}}
-* Danish: {{t+|da|Tyskland|n}}, {{t|da|Forbundsrepublikken Tyskland}}
+* Danish: {{t+|da|Tyskland|n}}
 * Dhivehi: {{t|dv|ޖަރުމަނުވިލާތް}}
 * Dutch: {{t+|nl|Duitsland|n}}
 * Dzongkha: {{t|dz|ཇཱར་མ་ནི་|sc=Tibt}}
@@ -168,11 +168,11 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Greek: {{t+|el|Γερμανία|f}}
 *: Ancient: {{t|grc|Γερμανία|f}}
 * Guaraní: {{t|gn|Alemaña}}
-* Gujarati: {{t|gu|જર્મની|tr=jarmanī|sc=Gujr}}
+* Gujarati: {{t|gu|જર્મની|sc=Gujr}}
 * Haitian Creole: {{t|ht|Almay}}
 * Hausa: {{t|ha|Jamus|f|alt=Jāmùs}}
 * Hawaiian: {{t|haw|Kelemānia}}, {{t|haw|Koekelana}}
-* Hebrew: {{t|he|גרמניה|f|tr=germánya}}, {{t|he|גֶּרְמַנְיָה|f|tr=germánya}}
+* Hebrew: {{t|he|גֶּרְמַנְיָה|f|tr=germánya}}
 * Hindi: {{t+|hi|जर्मनी|m}}
 * Hungarian: {{t+|hu|Németország}}
 * Icelandic: {{t+|is|Þýskaland|n}}
@@ -186,20 +186,18 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Irish: {{t+|ga|Gearmáin|alt=an Ghearmáin|f}}
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
-* Newari: {{t|new|जर्मनी}}
-* Norman: {{t|nrf|Allémangne|f}}
 * Javanese: {{t+|jv|Jerman}}
 * Kabyle: {{t|kab|Lalman}}
 * Kannada: {{t+|kn|ಜರ್ಮನಿ|sc=Knda}}
 * Karakalpak: {{t|kaa|Germaniya}}
 * Kashubian: {{t+|csb|Miemieckô}}
 * Kazakh: {{t|kk|Германия|sc=Cyrl}}
-* Khmer: {{t|km|​អាល្លឺម៉ង់|tr=āleumong|sc=Khmr}}
+* Khmer: {{t|km|​អាល្លឺម៉ង់|tr=’aalləɨmɑŋ|sc=Khmr}}
 * Korean: {{t|ko|^독일|sc=Hang}} ({{t+|ko|獨逸|sc=Hani}}); {{t|ko|^도이췰란드|sc=Hang}} {{qualifier|North Korea}}
 * Kven: {{t|fkv|Tuiska}}
 * Kyrgyz: {{t+|ky|Германия|sc=Cyrl}}
 * Ladino: {{t|lad|Almania}}
-* Lao: {{t|lo|ປະເທດເຢັຽລະມັນ|sc=Laoo}}, {{t|lo|ເຢັຽລະມັນ|sc=Laoo}}, {{t|lo|ປະເທດເຢຍຣະມັນ}}, {{t|lo|ເຢຍຣະມັນ}}, {{t|lo|ປະເທດເຢັຍຣະມັນ}}, {{t|lo|ເຢັຍຣະມັນ}}
+* Lao: {{t|lo|ເຢັຽລະມັນ|sc=Laoo}}, {{t|lo|ເຢຍຣະມັນ}}, {{t|lo|ເຢັຍຣະມັນ}}
 * Latgalian: {{t|ltg|Vuoceja|f}}
 {{trans-mid}}
 * Latin: {{t+|la|Germania|f}}
@@ -230,6 +228,8 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Nahuatl: {{t+|nah|Teutontlālpan}}
 * Navajo: {{t|nv|Béésh Bichʼahii bikéyah}}
 * Nepali: {{t|ne|जर्मनी|sc=Deva}}
+* Newari: {{t|new|जर्मनी}}
+* Norman: {{t|nrf|Allémangne|f}}
 * North Frisian: {{t|frr|Sjiisklun}} {{qualifier|Amrum}}, {{t|frr|Tjüschlönj}} {{qualifier|Mooring}}
 * Northern Sami: {{t|se|Duiska}}
 * Norwegian: 
@@ -249,7 +249,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Plautdietsch: {{t+|pdt|Dietschlaund|n}}, {{t+|pdt|Dietschlaunt|n}}
 * Polish: {{t+|pl|Niemcy|f-p}}
 * Portuguese: {{t+|pt|Alemanha|f}}
-* Punjabi: {{t|pa|ਜਰਮਨੀ|tr=jarmanī|sc=Guru}}
+* Punjabi: {{t|pa|ਜਰਮਨੀ|sc=Guru}}
 * Quechua: {{t|qu|Alimanya}}
 * Romanian: {{t+|ro|Germania|f}}
 * Russian: {{t+|ru|Герма́ния|f}}
@@ -276,7 +276,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Tamil: {{t|ta|ஜர்மனி}}
 * Tatar: {{t|tt|Алмания|sc=Cyrl}}
 * Telugu: {{t+|te|జర్మనీ}}
-* Thai: {{t+|th|ประเทศเยอรมนี|tr=bprà-têet yəə-rá-má-nii}}, {{t+|th|เยอรมนี|tr=yəə-rá-má-nii|sc=Thai}}
+* Thai: {{t+|th|เยอรมนี|sc=Thai}}
 * Tibetan: {{t|bo|འཇར་མན།|sc=Tibt}}
 * Tigrinya: {{t|ti|ጀርመን|sc=Ethi}}
 * Turkish: {{t+|tr|Almanya}}
