--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -118,7 +118,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Arabic: {{t+|ar|أَلْمَانْيَا|f}}
 *: Egyptian Arabic: {{t|arz|ألمانيا|sc=Arab}}
 * Aragonese: {{t|an|Alemanya|f}}
-* Aramaic: {{t|arc|ܓܪܡܢ|tr=Jerman}}
+* Aramaic: {{t|arc|ܓܪܡܢ|tr=jerman}}
 * Armenian: {{t+|hy|Գերմանիա}}
 * Aromanian: {{t|rup|Ghermãnia}}
 * Asturian: {{t+|ast|Alemaña|f}}
