--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -146,10 +146,10 @@ From {{etyl|xno|en}} {{m|fro|founder}} (French: {{m|fr|fonder}}), from {{etyl|la
 {{bor|en|frm|fondre}}, from {{der|en|la|fundō|fundere}}.
 
 ====Verb====
-{{en-verb}}
+{{en-verb}} {{tcx|transitive|lang=en}}
 
-# {{lb|en|transitive}} To [[melt]], especially of [[metal]] in an [[industry|industrial]] setting.
-# {{lb|en|transitive}} To form by melting a metal and pouring it into a mould; to [[cast]].
+# To [[melt]], especially of [[metal]] in an [[industry|industrial]] setting.
+# To form by melting a metal and pouring it into a mould; to [[cast]].
 #* Milton
 #*: Whereof to '''found''' their engines.
 
