--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -52,17 +52,17 @@ From {{etyl|xno|en}} {{m|fro|founder}} (French: {{m|fr|fonder}}), from {{etyl|la
 |chapter=4|url=http://openlibrary.org/works/OL1796924W
 |passage=“… That woman is stark mad, Lord Stranleigh. Her own father recognised it when he bereft her of all power in the great business he '''founded'''.&nbsp;&hellip;”}}
 
-====Conjugation====
+=====Conjugation=====
 {{en-conj-simple}}
 
 =====Related terms=====
 * {{l|en|foundation}}
 * {{l|en|founder}}
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|to start organization}} {{l|en|establish}}
 
-====Antonyms====
+=====Antonyms=====
 * {{sense|to begin building}} {{l|en|ruin}}
 * {{sense|to start organization}} {{l|en|dissolve}}, {{l|en|abolish}}
 
