t+sl:[[igrati]] ([[WT:EDIT|Assisted]]) <play#41961345>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -176,7 +176,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 *: Roman: {{t+|sh|ȉgrati|impf}}
 * Sicilian: {{t+|scn|giucari}}, {{t+|scn|jucari}}
 * Slovak: {{t|sk|hrať sa}}, {{t|sk|hrať|impf}}
-* Slovene: {{t+|sl|igrati se|impf}}
+* Slovene: {{t+|sl|igrati se|impf}}, {{t+|sl|igráti|impf}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|graś|impf}}
 *: Upper Sorbian: {{t|hsb|hrać|impf}}, {{t|hsb|zahrać|pf}}
