Category:English 1-syllable words <felt#41964438>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -7,6 +7,7 @@
 * {{IPA|/fɛlt/|lang=en}}
 * {{audio|en-us-felt.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɛlt|lang=en}}
+[[Category:English 1-syllable words]]
 
 ===Etymology 1===
 From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*feltaz}} (compare {{cog|nl|vilt}}, {{cog|de|Filz}}, {{cog|da|filt}}, {{cog|fr|feutre}}), from {{der|en|ine-pro|*pilto}}, {{m|ine-pro|*pilso}} 'felt' (compare {{cog|la|pilleus||felt}} (adj.), {{cog|cu|плъсть|tr=plŭstĭ}}, {{cog|sq|plis}}, Ancient Greek {{m|grc|πῖλος}}), from *''pel-'' 'to beat'. More at [[anvil]].
