--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -470,6 +470,19 @@ From {{m|fr|butte}}.
 ====Declension====
 {{sv-adj-reg|3=buttr}}
 
+----
+
+==West Flemish==
+
+===Noun===
+{{head|vls|noun}}
+
+# {{lb|en|uncountable}} butter
+
+====Synonyms====
+* {{sense|butter}} {{l|vls|beuter}}
+
+
 [[af:butter]]
 [[ar:butter]]
 [[br:butter]]
