--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -24,7 +24,8 @@
 |m=nǎo
 |c=nou5
 |h=pfs=nâu
-|mn=ló
+|mn=qz:nó͘/tw,xm,zz:náu/qz,tw:ló/tw:ló͘
+|mn_note=nó͘/náu - literary; ló/ló͘ - vernacular
 |mc=y
 |oc=y
 |cat=v
